--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "body-parser": "1.19.0",
     "ejs": "2.6.1",
     "express": "4.16.4",
-    "nodemailer": "6.1.1",
+    "nodemailer": ">=6.4.16",
     "require": "2.4.20"
   }
 }
